# lta

./: .gitignore  LICENSE  MANIFEST.in  README.md  convert-ids.py  copy_files.sh  correct_metadata.py  fetch_metadata.py  files.py  interview-ids.json  interview_cmdi.py  list_extensions.py  lta_example.config  media-corpus-profile.xsd  media_files.py  new-ids.txt  new-interview-ids.json  pretty.sh  process_cmdi_dir.py  process_interview_cmdi.py  pyproject.toml  requirements.txt  setup.py  terminal-output-server.txt
.github/workflows/: lint.yml
lta/: interview_cmdi.py  process_cmdi_dir.py
src/lta/: __init__.py  api.py  cli.py  cmdi_processes.py  config.py  fetch_metadata.py  files.py  interview_cmdi.py  media-session-profile.xsd  media_files.py  mediatypes.py  metadata.py  network.py  process_cmdi_dir.spec  process_interview_cmdi.py  session_cmdi.py  xml_validation.py
