[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lta"
license = {file = "LICENSE"}
authors = [{name = "Marc Altmann", email = "m.altmann@fu-berlin.de"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python=">=3.12"
dynamic = ["version", "description"]
dependencies = [
    "click==8.1.8",
    "requests==2.32.3",
    "xmlschema==3.4.3",
    "lxml==5.3.1"
]

[project.optional-dependencies]
test = [
    "pytest",
    "faker",
    "tox",
    "coverage",
    "pytest-cov",
]

[project.urls]
Home = "https://github.com/oral-history-digital/lta"

[project.scripts]
lta = "lta:lta_cli"
