[project]
name = "lta"
version = "0.3.0"
description = "Long term archiving tool for oh.d archives"
readme = "README.md"
authors = [
    { name = "Marc Altmann", email = "m.altmann@fu-berlin.de" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "lxml>=5.3.1",
    "requests>=2.32.3",
    "xmlschema>=3.4.3",
]

[project.scripts]
lta = "lta:lta_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
