[project]
name = "lta"
version = "0.3.0"
description = "Long term archiving tool for oh.d archives"
readme = "README.md"
authors = [
    { name = "Marc Altmann", email = "m.altmann@fu-berlin.de" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "lxml>=6.0.2",
    "requests>=2.33.1",
    "xmlschema>=4.3.1",
]

[project.scripts]
lta = "lta:lta_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
